resources/assets/css/modal.css
.piermodal {
	font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
		helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial,
		sans-serif;
}

.piermodal .fixed {
	position: fixed;
}

.piermodal .inset-y-0 {
	top: 0;
	bottom: 0;
}

.piermodal .right-0 {
	right: 0;
}

.piermodal__overlay {
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background: rgba(0, 0, 0, 0.6);
	display: flex;
	justify-content: center;
	align-items: flex-start;
	z-index: 999;
	padding-top: 3rem;
}

.piermodal__content {
	padding-top: 48px;
	padding-bottom: 48px;
	z-index: 999;
}

.piermodal__card {
	max-width: 100vw;
	pointer-events: auto;
	border-radius: 0.5rem;
	background-color: #fff;
}

.piermodal__container {
	background-color: #fff;
	padding: 30px;
	max-width: 700px;
	max-height: 100vh;
	border-radius: 4px;
	overflow-y: auto;
	box-sizing: border-box;
}

.piermodal__header {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.piermodal__title {
	margin-top: 0;
	margin-bottom: 0;
	font-weight: 600;
	font-size: 1.25rem;
	line-height: 1.25;
	color: #00449e;
	box-sizing: border-box;
}

.piermodal__close {
	background: transparent;
	border: 0;
}

.piermodal__header .piermodal__close:before {
	content: "\2715";
}

.piermodal__content {
	margin-top: 2rem;
	margin-bottom: 2rem;
	line-height: 1.5;
	color: rgba(0, 0, 0, 0.8);
}

.piermodal__btn {
	font-size: 0.875rem;
	padding-left: 1rem;
	padding-right: 1rem;
	padding-top: 0.5rem;
	padding-bottom: 0.5rem;
	background-color: #e6e6e6;
	color: rgba(0, 0, 0, 0.8);
	border-radius: 0.25rem;
	border-style: none;
	border-width: 0;
	cursor: pointer;
	-webkit-appearance: button;
	text-transform: none;
	overflow: visible;
	line-height: 1.15;
	margin: 0;
	will-change: transform;
	-moz-osx-font-smoothing: grayscale;
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	-webkit-transform: translateZ(0);
	transform: translateZ(0);
	transition: -webkit-transform 0.25s ease-out;
	transition: transform 0.25s ease-out;
	transition: transform 0.25s ease-out, -webkit-transform 0.25s ease-out;
}

.piermodal__btn:focus,
.piermodal__btn:hover {
	-webkit-transform: scale(1.05);
	transform: scale(1.05);
}

.piermodal__btn-primary {
	background-color: #00449e;
	color: #fff;
}

@keyframes mmfadeIn {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}

@keyframes mmfadeOut {
	from {
		opacity: 1;
	}

	to {
		opacity: 0;
	}
}

@keyframes mmslideIn {
	from {
		transform: translateY(15%);
	}

	to {
		transform: translateY(0);
	}
}

@keyframes mmslideOut {
	from {
		transform: translateY(0);
	}

	to {
		transform: translateY(-10%);
	}
}

@keyframes mmswipeIn {
	from {
		transform: translateX(110%);
	}

	to {
		transform: translateX(0);
	}
}

@keyframes mmswipeOut {
	from {
		transform: translateX(0);
	}

	to {
		transform: translateX(110%);
	}
}

.piermodal-swipe,
.piermodal-slide {
	display: none;
}

.piermodal-swipe.is-open,
.piermodal-slide.is-open {
	display: block;
}

.piermodal-swipe[aria-hidden="false"] .piermodal__overlay,
.piermodal-slide[aria-hidden="false"] .piermodal__overlay {
	animation: mmfadeIn 0.3s cubic-bezier(0, 0, 0.2, 1);
}

.piermodal-slide[aria-hidden="false"] .piermodal__container,
.piermodal-slide[aria-hidden="false"] .piermodal__card {
	animation: mmslideIn 0.3s cubic-bezier(0, 0, 0.2, 1);
}

/* Support different transitions for nested modals */
.piermodal-swipe[aria-hidden="false"] > div > .piermodal__container,
.piermodal-swipe[aria-hidden="false"] > div > .piermodal__card {
	animation: mmswipeIn 0.3s cubic-bezier(0, 0, 0.2, 1);
}

.piermodal-swipe[aria-hidden="true"] .piermodal__overlay,
.piermodal-slide[aria-hidden="true"] .piermodal__overlay {
	animation: mmfadeOut 0.3s cubic-bezier(0, 0, 0.2, 1);
}

/* Support different transitions for nested modals */
.piermodal-slide[aria-hidden="true"] > div > .piermodal__container,
.piermodal-slide[aria-hidden="true"] > div > .piermodal__card {
	animation: mmslideOut 0.3s cubic-bezier(0, 0, 0.2, 1);
}

.piermodal-swipe[aria-hidden="true"] .piermodal__container,
.piermodal-swipe[aria-hidden="true"] .piermodal__card {
	animation: mmswipeOut 0.3s cubic-bezier(0, 0, 0.2, 1);
}

.piermodal-slide .piermodal__card,
.piermodal-slide .piermodal__container,
.piermodal-slide .piermodal__overlay {
	will-change: transform;
}

